header overlapping issue fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,8 @@
     .header {
         width:100%;
         height:200px;
+        position: fixed;
+
         background: white;
         color: #000;        
         // position:fixed;
@@ -32,7 +34,6 @@
     .logo {   
         width: 300px;
         margin: auto;
-        
         text-align: center; 
         font-size: 2.5rem;       
         color:rgb(0,0,0);
@@ -48,6 +49,8 @@
  /* Body */
     .main-body {        
         flex: 1 0 auto;
+        position: relative;
+        margin-top: 200px;
     }
     // .footer {
     //     position: absolute;
@@ -85,13 +88,15 @@
     .card h2 {
         position: absolute;
         bottom: 10%;
-        width: 100%;
+        width: 90%;
+        margin-left: 5%;
         padding: 15px;
         margin-bottom: 0;
         font-weight: 300;
         font-size: auto;
         line-height: 30px;
         color: white;
+        border-bottom: 2px solid white;
         text-align: left;
         z-index: 99;
         cursor: pointer;
